--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
         <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />  
-        <title>Form</title>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <meta http-equiv="X-UA-Compatible" content="ie=edge">
+                <title>Form</title>
+                <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />  
+                <link rel="stylesheet" href="style.css">
         </head>
         <body>
 
-    
         <div id="container">
                 <div class="form-wrap">
-                        <h1>Sign-Up</h1>
+                        <h1>Sign Up</h1>
                         <p>It's free and only takes a minute</p>
                         <br>
                         <form>
@@ -42,8 +41,8 @@
                                         <input type="password2" name="password2" id="password2" />
                                 </div>
                                 <button type="submit" class="btn">Sign up</button>
-                                <p class="botom-text">
-                                        By clicking the Sign Up button, you agree to our <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>
+                                <p class="bottom-text">
+                                By clicking the Sign Up button, you agree to our <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>
                                 </p>
                         </form>
                 </div>
